# modak-data-challenge

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/backend/: allowance.py  payment_schedule.py
data/events/: allowance.py
data/files/: allowance_events.json
notebooks/: 1-exploratory-review.ipynb
utils/: preprocessor.py
