[tool.poetry]
name = "modak-data-challenge"
version = "0.1.0"
description = "Modak data challenge"
authors = ["Elias Alcides Prost <elias.prost@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"
pandas = "2.2.*"
numpy = "2.1.*"
loguru = "^0.7.3"
ydata-profiling = "^4.12.1"
setuptools = "^75.7.0"
distribute = "^0.7.3"
plotly = "^5.24.1"
nbformat = "^5.10.4"

[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.1.5"
ipykernel = "^6.29.5"
flake8-pyproject = "^1.2.3"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
